# eldenring-menu-input-delay-fix

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: aob.rs  lib.rs  patch.rs
tools/: find_menu_input_setter.py
