[package]
name = "menu-input-delay-fix"
version = "1.1.0"
edition = "2021"
authors = ["Claude (Anthropic)"]
license = "AGPL-3.0"
description = "Standalone DLL that removes the Elden Ring 1.12+ menu input-accept delay"
repository = "https://github.com/rbignon/eldenring-menu-input-delay-fix"

[lib]
name = "MenuInputDelayFix"
crate-type = ["cdylib", "rlib"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]

[profile.release]
strip = "symbols"
lto = true
